# binary64-multiplier-simulator

./: CMakeLists.txt  README.md  main.cpp
include/: FloatData.h  IDecomposer.h  IMultiplier.h  Menu.h  Multiplier.h  Simulator.h
src/: Decomposer.cpp  Decomposer.h  FloatData.cpp  Menu.cpp  Multiplier.cpp  Multiplier.h  Simulator.cpp
